<resources>
    <string name="app_name">MyGym</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account_login">Already have an account ? Login</string>
    <string name="dont_have_an_account_sign_up">Dont have an account ? Sign up</string>
    <string name="log_out">Log out</string>
    <string name="new_user_sign_up">New User ? Sign Up</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="username">Username</string>

</resources>