<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/splash"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ImageView
        android:layout_width="328dp"
        android:layout_height="161dp"
        android:src="@drawable/title2" />

    <androidx.cardview.widget.CardView
        android:layout_width="363dp"
        android:layout_height="548dp"
        android:layout_margin="30dp"
        android:background="@drawable/custom_edittext"
        app:cardBackgroundColor="@color/faint_white"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="343dp"
            android:layout_height="722dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/logintext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:padding="8dp"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textColorHint="@color/black" />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/MobNo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/baseline_phone_24"
                android:drawablePadding="8dp"
                android:hint="@string/mobile_number"
                android:padding="8dp"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/Username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/username"
                android:padding="8dp"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textColorHint="@color/black" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/Owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gym Owner"
                android:textStyle="bold"/>

            <CheckBox
                android:id="@+id/User"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="-50dp"
                android:text="Gym User"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btn_SignUp"
                android:layout_width="291dp"
                android:layout_height="68dp"
                android:layout_marginTop="3dp"
                android:backgroundTint="@color/black"
                android:text="@string/sign_up"
                android:textSize="18sp" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>